# engnr-nsu-cpp-2021

./: .gitmodules
.github/buildsteps/linux/: run-unittests.sh
1/: CMakeCache.txt  CMakeLists.txt  Hash.cpp  Makefile  README.md  cmake_install.cmake  main.cpp
2/: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  comm.cpp  comm.h  main.cpp
2/for/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
2/for/libs/SafeInt/: Makefile  cmake_install.cmake
2/for/libs/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
2/for/libs/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
2/for/libs/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
2/for/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
2/libs/SafeInt/: Makefile
2/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  tests.cpp
lab1/: CMakeCache.txt  CMakeLists.txt  Hash.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  main.cpp  pluss_workinghard.sln  pluss_workinghard.vcxproj  pluss_workinghard.vcxproj.filters
